--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
-contractions
-nltk
-numpy
-pandas
-Pillow
-scikit_learn
-spacy
-streamlit
-textblob
-wordcloud
-pip3 install https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.5/en_core_web_sm-2.2.5.tar.gz --user
-
+contractions==0.1.72
+nltk==3.7
+numpy==1.23.4
+pandas==1.5.1
+Pillow==9.3.0
+scikit_learn==1.1.3
+spacy==3.4.3
+streamlit==1.14.1
+textblob==0.17.1
+wordcloud==1.8.2.2
